--- a/OHET_Project/OHET_Project/Views/Posts/Delete.cshtml
+++ b/OHET_Project/OHET_Project/Views/Posts/Delete.cshtml
@@ -4,45 +4,40 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<section id="three" class="wrapper style2">
+    <div class="inner">
+        <div class="inner">
+            <header class="align-center">
+                <p class="special">Are you sure you want to delete this article?</p>
+                <h2>Delete Article</h2>
+            </header>
+        </div>
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
+            <div class="12u$">
+                Title
+                @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
+            </div>
+            <br />
+            <div class="12u$">
+                Description
+                @Html.TextAreaFor(model => model.Description, new { @class = "form-control", disabled = "disabled", @rows = 24 })
+            </div>
+            <br />
+            <div class="12u$">
+                Date
+                <input type="text" value="@Model.Date" disabled="disabled" />
+            </div>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Post</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
+            <br />
 
-        <dd>
-            @Html.DisplayFor(model => model.Title)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Date)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Date)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <footer class="align-center">
+                <input type="submit" value="Delete" class="btn btn-default" />
+            </footer>
+        }
+        <div class="align-center">
             @Html.ActionLink("Back to List", "Index")
         </div>
-    }
-</div>
+    </div>
+</section>
