--- a/OHET_Project/OHET_Project/Views/Heroes/Edit.cshtml
+++ b/OHET_Project/OHET_Project/Views/Heroes/Edit.cshtml
@@ -182,12 +182,13 @@
         </article>
         <div class="@style bg"></div>
     </section>
-
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Save" class="btn btn-default" />
+    <center>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Save" class="btn btn-default" />
+            </div>
         </div>
-    </div>
+    </center>
 }
 
 
