--- a/OHET_Project/OHET_Project/Views/Classes/Create.cshtml
+++ b/OHET_Project/OHET_Project/Views/Classes/Create.cshtml
@@ -26,6 +26,10 @@
             </div>
             <br />
             <div class="12u$">
+                @Html.DropDownList("isSpellcaster",new SelectList(new[]{new { Value = "true", Text = "Yes" },new { Value = "false", Text = "No" },},"Value","Text",Model))
+            </div>
+            <br />
+            <div class="12u$">
                 <input type="file" name="ImageData" onchange="fileCheck(this);" />
             </div>
 
