--- a/OHET_Project/OHET_Project/Views/Home/Content.cshtml
+++ b/OHET_Project/OHET_Project/Views/Home/Content.cshtml
@@ -14,7 +14,10 @@
                         <p></p>
                         <footer class="align-center">
                             <a href="@Url.Action("Index", "Classes", new {isOff = true})" class="button alt">Official</a>
-                            <a href="@Url.Action("Index", "Classes", new {isOff = false})" class="button alt">Homebrew</a>
+                            @if (User.Identity.IsAuthenticated)
+                            {
+                                <a href="@Url.Action("Index", "Classes", new { isOff = false })" class="button alt">Homebrew</a>
+                            }
                         </footer>
                     </div>
                 </div>
@@ -32,7 +35,10 @@
                         <p></p>
                         <footer class="align-center">
                             <a href="@Url.Action("Index", "Rules", new {isOff = true})" class="button alt">Official</a>
-                            <a href="@Url.Action("Index", "Rules", new {isOff = false})" class="button alt">Homebrew</a>
+                            @if (User.Identity.IsAuthenticated)
+                            {
+                                <a href="@Url.Action("Index", "Rules", new { isOff = false })" class="button alt">Homebrew</a>
+                            }
                         </footer>
                     </div>
                 </div>
@@ -50,7 +56,10 @@
                         <p></p>
                         <footer class="align-center">
                             <a href="@Url.Action("Index", "Adventures", new {isOff = true})" class="button alt">Official</a>
-                            <a href="@Url.Action("Index", "Adventures", new {isOff = false})" class="button alt">Homebrew</a>
+                            @if (User.Identity.IsAuthenticated)
+                            {
+                                <a href="@Url.Action("Index", "Adventures", new { isOff = false })" class="button alt">Homebrew</a>
+                            }
                         </footer>
                     </div>
                 </div>
@@ -68,7 +77,10 @@
                         <p></p>
                         <footer class="align-center">
                             <a href="@Url.Action("Index", "Items", new {isOff = true})" class="button alt">Official</a>
-                            <a href="@Url.Action("Index", "Items", new {isOff = false})" class="button alt">Homebrew</a>
+                            @if (User.Identity.IsAuthenticated)
+                            {
+                                <a href="@Url.Action("Index", "Items", new { isOff = false })" class="button alt">Homebrew</a>
+                            }
                         </footer>
                     </div>
                 </div>
@@ -86,7 +98,10 @@
                         <p></p>
                         <footer class="align-center">
                             <a href="@Url.Action("Index", "Spells", new {isOff = true})" class="button alt">Official</a>
-                            <a href="@Url.Action("Index", "Spells", new {isOff = false})" class="button alt">Homebrew</a>
+                            @if (User.Identity.IsAuthenticated)
+                            {
+                                <a href="@Url.Action("Index", "Spells", new { isOff = false })" class="button alt">Homebrew</a>
+                            }
                         </footer>
                     </div>
                 </div>
@@ -104,7 +119,10 @@
                         <p></p>
                         <footer class="align-center">
                             <a href="@Url.Action("Index", "Monsters", new {isOff = true})" class="button alt">Official</a>
-                            <a href="@Url.Action("Index", "Monsters", new {isOff = false})" class="button alt">Homebrew</a>
+                            @if (User.Identity.IsAuthenticated)
+                            {
+                                <a href="@Url.Action("Index", "Monsters", new { isOff = false })" class="button alt">Homebrew</a>
+                            }
                         </footer>
                     </div>
                 </div>
