--- a/OHET_Project/OHET_Project/Views/Items/Delete.cshtml
+++ b/OHET_Project/OHET_Project/Views/Items/Delete.cshtml
@@ -22,7 +22,7 @@
             <br />
             <div class="12u$">
                 Cost
-                @Html.EditorFor(model => model.cost, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
+                @Html.EditorFor(model => model.cost, new { htmlAttributes = new { @class = "form-control", disabled = "disabled", @type = "text" } })
             </div>
             <br />
             <div class="12u$">
