--- a/OHET_Project/OHET_Project/Views/Posts/Index.cshtml
+++ b/OHET_Project/OHET_Project/Views/Posts/Index.cshtml
@@ -7,6 +7,7 @@
 <section id="three" class="wrapper style2">
     <div class="inner">
         <header class="align-center">
+            <p class="special"></p>
             <h2>Articles</h2>
         </header>
         <footer class="align-center">
@@ -63,7 +64,7 @@
                                         <a href="@Url.Action("Edit", "Posts", new { id = item.IDPost })" class="button alt">Edit</a>
                                         <a href="@Url.Action("Delete", "Posts", new { id = item.IDPost })" class="button alt">Delete</a>
                                     }
-                                    <a href="@Url.Action("Details", "Posts", new { id = item.IDPost })" class="button alt">Details</a>
+                                    <a href="@Url.Action("Details", "Posts", new { id = item.IDPost })" class="button alt">Read</a>
                                 </footer>
                             </div>
                         </div>
