--- a/OHET_Project/OHET_Project/Views/Subposts/Delete.cshtml
+++ b/OHET_Project/OHET_Project/Views/Subposts/Delete.cshtml
@@ -37,7 +37,7 @@
             </footer>
         }
         <div class="align-center">
-            @Html.ActionLink("Back to Article", "Details", "Posts", new { id = ViewBag.IDPost }, new { })
+            @Html.ActionLink("Back to Article", "Details", "Posts", new { id = Model.IDPost }, new { })
         </div>
     </div>
 </section>
