--- a/OHET_Project/OHET_Project/Views/Subposts/Edit.cshtml
+++ b/OHET_Project/OHET_Project/Views/Subposts/Edit.cshtml
@@ -35,7 +35,7 @@
         }
     </div>
     <div class="align-center">
-        @Html.ActionLink("Back to Class", "Details", "Classes", new { id = ViewBag.IDClass }, new { })
+        @Html.ActionLink("Back to Article", "Details", "Posts", new { id = Model.IDPost }, new { })
     </div>
 </section>
 
