--- a/OHET_Project/OHET_Project/Views/Adventures/Details.cshtml
+++ b/OHET_Project/OHET_Project/Views/Adventures/Details.cshtml
@@ -32,7 +32,7 @@
             }
         </footer>
         <div class="align-center">
-            @if (Model.Content.ApplicationUserId == ViewBag.userId)
+            @if (Model.Content.ApplicationUserId == ViewBag.userId || !User.Identity.IsAuthenticated)
             {
                 @Html.ActionLink("Back to List", "Index", new { isOff = ViewBag.isOff })
             }
