--- a/OHET_Project/OHET_Project/Views/Classes/Details.cshtml
+++ b/OHET_Project/OHET_Project/Views/Classes/Details.cshtml
@@ -21,7 +21,17 @@
             Description
             @Html.TextAreaFor(model => model.description, new { @class = "form-control", disabled = "disabled", @rows = 12 })
         </div>
-
+        <br />
+        <div class="12u$">
+            @if (@Model.isSpellcaster)
+            {
+                <p>Spellcasting: Yes</p>
+            }
+            else
+            {
+                <p>Spellcasting: No</p>
+            }
+        </div>
         <br />
 
         <footer class="align-center">
@@ -32,7 +42,7 @@
             }
         </footer>
         <div class="align-center">
-            @if (Model.Content.ApplicationUserId == ViewBag.userId)
+            @if (Model.Content.ApplicationUserId == ViewBag.userId || !User.Identity.IsAuthenticated)
             {
                 @Html.ActionLink("Back to List", "Index", new { isOff = ViewBag.isOff })
             }
@@ -84,6 +94,16 @@
                         </div>
                     </div>
                 </div>
+            }
+        </div>
+        <div class="align-center">
+            @if (Model.Content.ApplicationUserId == ViewBag.userId || !User.Identity.IsAuthenticated)
+            {
+                @Html.ActionLink("Back to List", "Index", new { isOff = ViewBag.isOff })
+            }
+            else
+            {
+                @Html.ActionLink("Back to List", "Details", "Contents", new { id = Model.IDContent }, new { })
             }
         </div>
     </div>
