--- a/OHET_Project/OHET_Project/Views/Classes/Index.cshtml
+++ b/OHET_Project/OHET_Project/Views/Classes/Index.cshtml
@@ -7,6 +7,7 @@
 <section id="three" class="wrapper style2">
     <div class="inner">
         <header class="align-center">
+            <p class="special"></p>
             @if (ViewBag.isOff)
             {
                 <h2>Official Classes</h2>
@@ -17,10 +18,13 @@
             }
         </header>
         <footer class="align-center">
-            @if (User.IsInRole("User") || User.IsInRole("Editor") || User.IsInRole("Admin"))
+            @if ((User.IsInRole("User") || User.IsInRole("Editor") || User.IsInRole("Admin")) && !ViewBag.isOff)
             {
                 <a href="@Url.Action("Create", "Classes", new { isOff = ViewBag.isOff })" class="button alt">Create Class</a>
             }
+            <br />
+            <br />
+            @Html.ActionLink("Back to Content", "Content", "Home")
         </footer>
     </div>
 </section>
@@ -41,7 +45,11 @@
                                 <header class="align-center">
                                     @if (item.isSpellcaster)
                                     {
-                                        <p>Spellcaster</p>
+                                        <p class="special">Spellcaster</p>
+                                    }
+                                    else
+                                    {
+                                        <p class="special"></p>
                                     }
                                     <h2>@item.name</h2>
                                 </header>
@@ -68,6 +76,9 @@
                     </div>
                 }
             }
+        </div>
+        <div class="align-center">
+            @Html.ActionLink("Back to Content", "Content", "Home")
         </div>
     </div>
 </section>
