--- a/OHET_Project/OHET_Project/Views/Spells/Index.cshtml
+++ b/OHET_Project/OHET_Project/Views/Spells/Index.cshtml
@@ -7,6 +7,7 @@
 <section id="three" class="wrapper style2">
     <div class="inner">
         <header class="align-center">
+            <p class="special"></p>
             @if (ViewBag.isOff)
             {
                 <h2>Official Spells</h2>
@@ -34,10 +35,13 @@
             </p>
         }
         <footer class="align-center">
-            @if (User.IsInRole("User") || User.IsInRole("Editor") || User.IsInRole("Admin"))
+            @if ((User.IsInRole("User") || User.IsInRole("Editor") || User.IsInRole("Admin")) && !ViewBag.isOff)
             {
                 <a href="@Url.Action("Create", "Spells", new { isOff = ViewBag.isOff })" class="button alt">Create Spell</a>
             }
+            <br />
+            <br />
+            @Html.ActionLink("Back to Content", "Content", "Home")
         </footer>
     </div>
 </section>
@@ -79,6 +83,9 @@
                         </div>
                     }
                 }
+        </div>
+        <div class="align-center">
+            @Html.ActionLink("Back to Content", "Content", "Home")
         </div>
     </div>
 </section>
