Translated text to english in create character

--- a/OHET_Project/OHET_Project/Views/Heroes/Create.cshtml
+++ b/OHET_Project/OHET_Project/Views/Heroes/Create.cshtml
@@ -11,8 +11,8 @@
         <!-- TITLE -->
         <div class="inner">
             <header class="align-center">
-                <p class="special">Nam vel ante sit amet libero scelerisque facilisis eleifend vitae urna</p>
-                <h2>Krok Pierwszy - Określ swoją klasę</h2>
+                <p class="special">First step</p>
+                <h2>Choose Your Class</h2>
             </header>
         </div>
         <!-- BODY -->
@@ -27,8 +27,8 @@
                 <!-- TYTUŁ -->
                 <div class="inner">
                     <header class="align-center">
-                        <p class="special">Nam vel ante sit amet libero scelerisque facilisis eleifend vitae urna</p>
-                        <h2>Krok Drugi - Opowiedz nam o sobie</h2>
+                        <p class="special">Second step</p>
+                        <h2>Tell us something about yourself</h2>
                     </header>
                 </div>
                 <!-- BODY -->
@@ -48,8 +48,8 @@
                 <!-- TYTUŁ -->
                 <div class="inner">
                     <header class="align-center">
-                        <p class="special">Nam vel ante sit amet libero scelerisque facilisis eleifend vitae urna</p>
-                        <h2>Krok Trzeci - Statystyki Twojego Bohatera</h2>
+                        <p class="special">Third step</p>
+                        <h2>Choose your stats</h2>
                     </header>
                 </div>
                 <!-- BODY -->
